fixed footer breaking the page, adjusted brand card info to not overlap header

--- a/marketplace_builder/assets/styles/vendor.css
+++ b/marketplace_builder/assets/styles/vendor.css
@@ -5625,14 +5625,11 @@ body {
         -o-object-fit: cover;
            object-fit: cover; }
 
-.footer > .container {
-  width: 100%;
-  max-width: 100%;
-  padding: 0;
-  margin: 0; }
-  .footer > .container .social-media {
+.footer {
+  background: #626487; }
+  .footer .social-media {
     background: #626487; }
-    .footer > .container .social-media .images {
+    .footer .social-media .images {
       padding: 2%;
       display: -webkit-box;
       display: -webkit-flex;
@@ -5642,46 +5639,34 @@ body {
       -webkit-justify-content: center;
           -ms-flex-pack: center;
               justify-content: center; }
-      .footer > .container .social-media .images img {
+      .footer .social-media .images img {
         margin: 12.5px;
         margin: 1.25rem;
         margin-top: 0;
         margin-bottom: 0; }
-  .footer > .container .links {
+  .footer .links {
     background: #626487;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center; }
-    .footer > .container .links ul {
+    -webkit-box-pack: space-evenly;
+    -webkit-justify-content: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly; }
+    .footer .links li {
       list-style: none;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: center;
-      -webkit-justify-content: center;
-          -ms-flex-pack: center;
-              justify-content: center; }
-      .footer > .container .links ul li {
-        margin: 30px; }
-        .footer > .container .links ul li a {
-          font-family: 'gothamPro';
-          font-size: 11px;
-          color: #ffffff;
-          letter-spacing: 0;
-          text-align: center; }
-    .footer > .container .links.row {
+      margin-top: 20px;
+      margin-bottom: 20px; }
+      .footer .links li a {
+        font-family: 'gothamPro';
+        font-size: 11px;
+        color: #ffffff;
+        letter-spacing: 0;
+        text-align: center; }
+    .footer .links.row {
       margin: 0; }
-  .footer > .container .copyright {
+  .footer .copyright {
     text-align: center;
     display: -webkit-box;
     display: -webkit-flex;
@@ -5695,13 +5680,13 @@ body {
         -ms-flex-pack: center;
             justify-content: center;
     background: #54567b; }
-    .footer > .container .copyright p {
+    .footer .copyright p {
       margin: auto;
       font-family: 'gothamPro';
       font-size: 10px;
       color: #9a9ab2;
       letter-spacing: 0; }
-    .footer > .container .copyright.row {
+    .footer .copyright.row {
       margin: 0; }
 
 .button-wide {
@@ -7642,13 +7627,6 @@ body {
     letter-spacing: 0;
     text-align: center;
     line-height: 22px; }
-  .card-body p {
-    font-family: 'gothamProBold';
-    font-size: 16px;
-    color: #5c5f83;
-    letter-spacing: 0;
-    text-align: center;
-    line-height: 24px; }
 
 .scissors__page .order-section.container {
   background-color: #616386;
@@ -8863,10 +8841,28 @@ body {
   position: relative; }
 
 .cards-section.brand {
-  margin-top: 10%; }
+  margin-top: 11%; }
   .cards-section.brand .included {
     font-size: 24px;
     color: #4b4e75; }
+  .cards-section.brand .card {
+    max-width: 300px;
+    margin-bottom: 0; }
+    .cards-section.brand .card .card-body .card-title {
+      max-width: 171px;
+      -webkit-align-self: center;
+          -ms-flex-item-align: center;
+              align-self: center;
+      font-family: 'gothamPro'; }
+    .cards-section.brand .card .card-body .expire-date {
+      font-family: 'gothamPro';
+      color: #c0bfd6;
+      font-size: 12px; }
+    .cards-section.brand .card .card-body a {
+      font-family: 'gothamMedium'; }
+      .cards-section.brand .card .card-body a:hover, .cards-section.brand .card .card-body a:focus {
+        background: #4b4e75;
+        color: white; }
   .cards-section.brand .card-wrapper {
     display: -webkit-box;
     display: -webkit-flex;
@@ -11614,16 +11610,6 @@ body {
         white-space: normal; }
     .top-gallery .right-section {
       display: none !important; }
-  ul {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center; }
     .info-card ul li {
       width: initial;
       float: unset; }
@@ -12119,6 +12105,11 @@ body {
       display: none; }
     .cards-section.brand {
       margin-top: 175px; } }
+  @media (max-width: 576px) {
+      .brand-info .brand-card {
+        padding-top: 125px; }
+    .brand-info {
+      margin-top: 450px; } }
   @media (max-width: 1441px) {
       .main-card .side-bar-item {
         display: none; } }
