--- a/src/scss/pages/scissors.scss
+++ b/src/scss/pages/scissors.scss
@@ -40,14 +40,14 @@
     text-align: center;
     line-height: 22px;
   }
-  p {
-    font-family: 'gothamProBold';
-    font-size: 16px;
-    color: #5c5f83;
-    letter-spacing: 0;
-    text-align: center;
-    line-height: 24px;
-  }
+  // p {
+  //   font-family: 'gothamProBold';
+  //   font-size: 16px;
+  //   color: #5c5f83;
+  //   letter-spacing: 0;
+  //   text-align: center;
+  //   line-height: 24px;
+  // }
 }
 .scissors__page {
   .order-section.container {
